k8s/instance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: finance-${ENVIRONMENT}
spec:
  ingressClassName: nginx
  rules:
    - host: ${ENVIRONMENT}.${DOMAIN}
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
